@@ -1,3 +1,8 @@
+Wed Jul 30 18:34:28 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimAccountEditor.cpp:
+	  - The protocol tab is now only enabled if there are options inside it.
+
 Wed Jul 30 18:31:47 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimAccountEditor.cpp:
